core/tests/typescript/snapshots/integration_tests__typescript__typescript_function_parameter_dependency.snap
---
source: core/tests/typescript/mod.rs
assertion_line: 62
expression: "serde_json::to_string_pretty(&result).unwrap()"
---
{
  "file_path": "test.ts",
  "original_file_path": "test.ts",
  "line_metrics": [
    {
      "line_number": 1,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 2,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.3333333333333333,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    },
    {
      "line_number": 3,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    }
  ],
  "overall_complexity_score": 2.2333333333333334
}
